more demo cleanup, add gts for linting, etc.

--- a/src/demo/app.html
+++ b/src/demo/app.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notification Client</title>
-    <script src="./app-bundle.js"></script>
-    <link href="./client.css" rel="stylesheet">
+    <script src="app.js"></script>
+    <link href="app.css" rel="stylesheet">
     
 </head>
 
