--- a/src/demo/app-launcher.html
+++ b/src/demo/app-launcher.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Openfin Services Demo</title>
-    <script src="apps.js"></script>
+    <script src="app-launcher.js"></script>
 </head>
 <body>
 </body>
