Add Client API to toggle notification center

--- a/src/demo/app.html
+++ b/src/demo/app.html
@@ -75,7 +75,10 @@
 
     <div class="row">
         <button id="fetchAppNotifications">
-             fetchAppNotifications
+            Fetch Notifications
+        </button>
+        <button id="toggleNotificationCenter">
+            Toggle Center
         </button>
     </div>
 
