Add toggleNotificationCenter to Client API (#37)
* Add Provider API to toggle notification center

* Change WindowManager to singleton like WindowInfo

* Change back Object.assign and spacing

* Change success message

--- a/src/demo/app.html
+++ b/src/demo/app.html
@@ -75,7 +75,7 @@
 
     <div class="row">
         <button id="fetchAppNotifications">
-             fetchAppNotifications
+            Fetch Notifications
         </button>
     </div>
 
