[N/A] Aligned build process with layouts service - builds and runs via 'npm install ; npm start', with no additional build scripts.

--- a/res/demo/launcher.html
+++ b/res/demo/launcher.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Openfin Services Demo</title>
-    <script src="app-launcher.js"></script>
+    <script src="launcher-bundle.js"></script>
 </head>
 <body>
 </body>
