--- a/res/provider/ui/Toast.html
+++ b/res/provider/ui/Toast.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="toast-app"></div>
-        <script src="pack/toast-bundle.js"></script>
+        <script src="toast-bundle.js"></script>
         <script>
             fin.desktop.Window.getCurrent().updateOptions({ cornerRounding: { height: 0, width: 0 } })
         </script>
