--- a/res/provider/ui/index.html
+++ b/res/provider/ui/index.html
@@ -22,15 +22,17 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="pack/bundle.css" rel="stylesheet">
+  <link href="./css/launch-bar.css" rel="stylesheet">
+  <link href="./css/notifications.css" rel="stylesheet">
+  <link href="./css/openfin-center.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="react-app"></div>
 
-  <script src="pack/serviceui-bundle.js"></script>
-  <script src="pack/react-bundle.js"></script>
-  <script src="pack/openfin-bundle.js"></script>
+  <script src="./serviceui-bundle.js"></script>
+  <script src="./react-bundle.js"></script>
+  <script src="./openfin-bundle.js"></script>
 </body>
 
 </html>
