--- a/res/demo/app.html
+++ b/res/demo/app.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notification Client</title>
-    <script src="app.js"></script>
+    <script src="app-bundle.js"></script>
     <link href="app.css" rel="stylesheet">
     
 </head>
