--- a/res/provider/ui/index.html
+++ b/res/provider/ui/index.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="shortcut icon" href="image/shapes/trayIcon.png" />
 
-    <title>Notification Center</title>
-    <link rel="shortcut icon" href="image/shapes/trayIcon.png" />
+        <!-- Custom styles for this template -->
+        <link href="./css/base.css" rel="stylesheet">
+        <link href="./css/notification-center.css" rel="stylesheet">
 
-    <!-- Font Awesome -->
-    <script src="https://use.fontawesome.com/ef47d18271.js"></script>
+    </head>
 
-
-    <!-- Custom styles for this template -->
-    <link href="./css/launch-bar.css" rel="stylesheet">
-    <link href="./css/notifications.css" rel="stylesheet">
-    <link href="./css/openfin-center.css" rel="stylesheet">
-  </head>
-
-  <body>
-    index.html
-    <div id="react-app"></div>
-
-    <script src="./serviceui-bundle.js"></script>
-    <script src="./openfin-bundle.js"></script>
-  </body>
+    <body>
+        <div id="react-app"></div>
+    </body>
 
 </html>
