--- a/res/test/test-app.html
+++ b/res/test/test-app.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="../client/openfin-notifications.js"></script>
+    <script>
+        const title = fin.Window.me.name;
+        document.title = title;
+    </script>
     <title>Test App</title>
 </head>
 <body>
