Port spawn util from layouts and add to int tests

--- a/res/test/test-app.html
+++ b/res/test/test-app.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <script src="../client/openfin-notifications.js"></script>
+    <script src="../demo/testApp-bundle.js"></script>
     <script>
         const title = fin.Window.me.name;
         document.title = title;
