Update testapp text to be more correct

--- a/res/test/test-app.html
+++ b/res/test/test-app.html
@@ -10,6 +10,6 @@
     <title>Test App</title>
 </head>
 <body>
-    This file is a placeholder for when we actually implement tests
+    Notifcations Testing App
 </body>
 </html>
