--- a/res/provider/ui/notification-center.html
+++ b/res/provider/ui/notification-center.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
     <head>
-        <link href="./css/base.css" rel="stylesheet">
-        <link href="./css/notification-center.css" rel="stylesheet">
+        <link href="../styles.css" rel="stylesheet">
     </head>
 
     <body>
