--- a/res/provider/ui/toast.html
+++ b/res/provider/ui/toast.html
@@ -1,8 +1,7 @@
 <html>
 
     <head>
-        <link href="css/base.css" rel="stylesheet">
-        <link href="css/toast.css" rel="stylesheet">
+        <link href="../styles.css" rel="stylesheet">
     </head>
 
     <body class="toast-window">
