--- a/res/demo/app.html
+++ b/res/demo/app.html
@@ -7,8 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notification Client</title>
     <script src="app-bundle.js"></script>
+    <script src="../client/openfin-notifications.js"></script>
+    <script>
+        window.receivedEvents = [];
+        const queryParams = new URLSearchParams(location.search);
+        if (queryParams.get('registerListeners') === 'true') {
+            const eventTypes = [
+                'notification-action'
+            ];
+
+            for (const eventType of eventTypes) {
+                notifications.addEventListener(eventType, (payload) => {
+                    window.receivedEvents.push({listenerID: 0, payload});
+                });
+            }
+        }
+    </script>
     <link href="app.css" rel="stylesheet">
-    
+
 </head>
 
 <body>
