[SERVICE-567] improve unit tests

--- a/res/demo/app.html
+++ b/res/demo/app.html
@@ -20,7 +20,7 @@
 
             for (const eventType of eventTypes) {
                 notifications.addEventListener(eventType, (payload) => {
-                    window.receivedEvents.push({payload});
+                    window.receivedEvents.push({eventType, payload});
                 });
             }
         }
