--- a/res/demo/app.html
+++ b/res/demo/app.html
@@ -19,8 +19,8 @@
             ];
 
             for (const eventType of eventTypes) {
-                notifications.addEventListener(eventType, (payload) => {
-                    window.receivedEvents.push({eventType, payload});
+                notifications.addEventListener(eventType, (event) => {
+                    window.receivedEvents.push(event);
                 });
             }
         }
