[SERVICE-581] Toast manager hardening - Added LayoutStack class for storing Toast objects and enforcing Toast constraints. - Modified Toast initialisation. - Removed some methods from ToastManager that were very similar to each other. - Added clarifying comments around code that handles edge cases and race conditions. - Fin window wrapper ensures no calls are made to the underlying window objects once the window has closed. - Added buttons to demo app to spawn/clear multiple notifications simultaneously. - When raising the same notification ID from a demo app, titles will now be different. - Added recently added provider components to the provider window object. - Launcher app will exit if all other demo app windows are closed.

--- a/res/demo/app.html
+++ b/res/demo/app.html
@@ -91,6 +91,27 @@
         </button>
     </div>
 
+    <hr />
+    
+    <div class="row">
+        <button id="create2">
+            Create Random (x2)
+        </button>
+        <button id="create5">
+            Create Random (x5)
+        </button>
+    </div>
+    <div class="row">
+        <button id="clear2">
+            Clear Random (x2)
+        </button>
+        <button id="clear5">
+            Clear Random (x5)
+        </button>
+    </div>
+
+    <hr />
+
     <div class="row">
         <button id="fetchAppNotifications">
             Fetch Notifications
