--- a/res/demo/app.html
+++ b/res/demo/app.html
@@ -97,7 +97,12 @@
         </button>
     </div>
 
-    
+    <div class="row">
+        <button id="toggleNotificationCenter">
+            Toggle Center
+        </button>
+    </div>
+
     <div id="clientResponse"></div>
 
 </body>
