[SERVICE-582] Update demo app to create Expiring notification

--- a/res/demo/app.html
+++ b/res/demo/app.html
@@ -65,11 +65,11 @@
 
     <div class="row">
         <button id="button6">
-            Create Notification 6
+            Create Expiring Notification
         </button>
     
         <button id="clearbutton6">
-            Clear Notification 6
+            Clear Expiring Notification
         </button>
     </div>
 
